Fix span wrapping

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;      
     padding:10px;
+    min-width: 580px;
 }
 select {
     padding:5px 10px;
@@ -13,6 +14,7 @@ select {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom:20px;
 }
+
 .act:not(#ACT1) {
     display:none;
 }
@@ -46,7 +48,7 @@ p.content {
     margin:0 0 0 20px;
     padding:8px 0;
     cursor:default;
-    white-space:nowrap; 
+    word-wrap: break-word;
 }
 .area-contents .content:not(:last-child) {
     border-bottom:1px solid rgba(255, 255, 255, 0.15);
@@ -60,6 +62,9 @@ p.content {
 }
 .semi-required::before {
     content:"☆";
+}
+span {
+    display:inline-block;
 }
 /* TAGS */
 .waypoint, .boss, .connection, .quest, .trial, .hideout, .recipe, .npc {
